[gd_scene load_steps=61 format=3 uid="uid://da24yl2y8xbyy"]

[ext_resource type="Script" path="res://character/actor.gd" id="1_rvb4x"]
[ext_resource type="Texture2D" uid="uid://160kmimkw6yj" path="res://character/trchar025.png" id="2_c7p8k"]
[ext_resource type="Shader" path="res://WhiteColor.gdshader" id="3_7le1c"]
[ext_resource type="Texture2D" uid="uid://ci5o1t4b5mu8q" path="res://character/Shadows/SmallShadow.png" id="3_nvl4u"]
[ext_resource type="PackedScene" uid="uid://cpps0v62eks1q" path="res://Overlap/hitbox.tscn" id="7_w6ww0"]
[ext_resource type="Script" path="res://character/player/SwordHitbox.gd" id="8_0v0kl"]
[ext_resource type="PackedScene" uid="uid://bijkwkf3bg4e4" path="res://Effects/blink_animation_player.tscn" id="9_4016u"]
[ext_resource type="PackedScene" uid="uid://d03nxqp6kni4c" path="res://Overlap/hurtbox.tscn" id="9_b1ox4"]
[ext_resource type="PackedScene" uid="uid://tcsbc4yi3fm7" path="res://character/Stats.tscn" id="9_n3prt"]
[ext_resource type="PackedScene" uid="uid://cbhmwimui3knc" path="res://Overlap/soft_collision.tscn" id="10_k7a2a"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eu3ny"]
shader = ExtResource("3_7le1c")
shader_parameter/active = false

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hcbah"]
radius = 2.0
height = 8.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4wpnt"]
radius = 4.0
height = 14.0

[sub_resource type="Animation" id="Animation_j4cno"]
resource_name = "AttackDown"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 6), Vector2(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_animation_finished"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxPivot/AttackHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_jpfw5"]
resource_name = "AttackLeft"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-6, 0), Vector2(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_animation_finished"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxPivot/AttackHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_erkbb"]
resource_name = "AttackRight"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(6, 0), Vector2(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_animation_finished"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxPivot/AttackHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_rgije"]
resource_name = "AttackUp"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -6), Vector2(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_animation_finished"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxPivot/AttackHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_lkf08"]
resource_name = "IdleDown"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_n8v8i"]
resource_name = "IdleLeft"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_b3mmc"]
resource_name = "IdleRight"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_gc71f"]
resource_name = "IdleUp"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_y7ovq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [37]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxPivot/AttackHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_4mxbw"]
resource_name = "RunDown"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_ww1qp"]
resource_name = "RunLeft"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_oasgw"]
resource_name = "RunRight"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_utwwu"]
resource_name = "RunUp"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ayke2"]
_data = {
"AttackDown": SubResource("Animation_j4cno"),
"AttackLeft": SubResource("Animation_jpfw5"),
"AttackRight": SubResource("Animation_erkbb"),
"AttackUp": SubResource("Animation_rgije"),
"IdleDown": SubResource("Animation_lkf08"),
"IdleLeft": SubResource("Animation_n8v8i"),
"IdleRight": SubResource("Animation_b3mmc"),
"IdleUp": SubResource("Animation_gc71f"),
"RESET": SubResource("Animation_y7ovq"),
"RunDown": SubResource("Animation_4mxbw"),
"RunLeft": SubResource("Animation_ww1qp"),
"RunRight": SubResource("Animation_oasgw"),
"RunUp": SubResource("Animation_utwwu")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cafdb"]
animation = &"AttackLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mowuq"]
animation = &"AttackDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7ugnw"]
animation = &"AttackRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2i1e5"]
animation = &"AttackUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_15edo"]
blend_point_0/node = SubResource("AnimationNodeAnimation_cafdb")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_mowuq")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_7ugnw")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_2i1e5")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_exjty"]
animation = &"IdleLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_458yy"]
animation = &"IdleDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gbvob"]
animation = &"IdleRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cta55"]
animation = &"IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_yjpf8"]
blend_point_0/node = SubResource("AnimationNodeAnimation_exjty")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_458yy")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_gbvob")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_cta55")
blend_point_3/pos = Vector2(0, -1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0fv6l"]
animation = &"RollLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0yab8"]
animation = &"RollDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_28ky6"]
animation = &"RollRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j62cd"]
animation = &"RollUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_ku0m6"]
blend_point_0/node = SubResource("AnimationNodeAnimation_0fv6l")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_0yab8")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_28ky6")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_j62cd")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ibvnd"]
animation = &"RunLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0lpyc"]
animation = &"RunDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vcpfu"]
animation = &"RunRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qbaw5"]
animation = &"RunUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_xnun3"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ibvnd")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_0lpyc")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_vcpfu")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_qbaw5")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0uaq8"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t6tws"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rpsed"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nil6d"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s1xy6"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7nwp4"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2t1xx"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t0jao"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_injv7"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_0yf2i"]
states/Attack/node = SubResource("AnimationNodeBlendSpace2D_15edo")
states/Attack/position = Vector2(569, -19.5351)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_yjpf8")
states/Idle/position = Vector2(569, 56)
states/Roll/node = SubResource("AnimationNodeBlendSpace2D_ku0m6")
states/Roll/position = Vector2(721, 11.1297)
states/Run/node = SubResource("AnimationNodeBlendSpace2D_xnun3")
states/Run/position = Vector2(569, 131)
states/Start/position = Vector2(158, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_0uaq8"), "Idle", "Run", SubResource("AnimationNodeStateMachineTransition_t6tws"), "Run", "Idle", SubResource("AnimationNodeStateMachineTransition_rpsed"), "Idle", "End", SubResource("AnimationNodeStateMachineTransition_nil6d"), "Run", "End", SubResource("AnimationNodeStateMachineTransition_s1xy6"), "Idle", "Attack", SubResource("AnimationNodeStateMachineTransition_7nwp4"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_2t1xx"), "Idle", "Roll", SubResource("AnimationNodeStateMachineTransition_t0jao"), "Roll", "Idle", SubResource("AnimationNodeStateMachineTransition_injv7")]
graph_offset = Vector2(6, -45.8703)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mn2o2"]
radius = 7.0
height = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_uhepv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_td4ak"]
radius = 7.0
height = 20.0

[node name="Actor" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_rvb4x")
skin = ExtResource("2_c7p8k")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_eu3ny")
texture = ExtResource("2_c7p8k")
centered = false
offset = Vector2(-8, -20)
hframes = 4
vframes = 4

[node name="ShadowSprite" type="Sprite2D" parent="Sprite2D"]
position = Vector2(0, -1)
texture = ExtResource("3_nvl4u")

[node name="PhysicalCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -2)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_hcbah")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="PhysicalCollision"]
path_desired_distance = 8.0
target_desired_distance = 2.0
path_postprocessing = 1
simplify_path = true
radius = 12.0
debug_enabled = true

[node name="Hurtbox" parent="PhysicalCollision" instance=ExtResource("9_b1ox4")]
position = Vector2(-2, -7.23998e-06)
rotation = 1.5708
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" parent="PhysicalCollision/Hurtbox" index="0"]
visible = false
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_4wpnt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ayke2")
}

[node name="AnimationTree" type="AnimationTree" parent="AnimationPlayer"]
active = false
root_node = NodePath("../..")
tree_root = SubResource("AnimationNodeStateMachine_0yf2i")
anim_player = NodePath("..")
parameters/Attack/blend_position = Vector2(-0.000881076, -1.08683)
parameters/Idle/blend_position = Vector2(0, 1)
parameters/Roll/blend_position = Vector2(0, 1)
parameters/Run/blend_position = Vector2(0, 1)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="AnimationPlayer"]

[node name="BlinkAnimationPlayer" parent="AnimationPlayer" instance=ExtResource("9_4016u")]
root_node = NodePath("../..")

[node name="HitboxPivot" type="Marker2D" parent="."]
position = Vector2(0, -6)
rotation = 1.5708

[node name="AttackHitbox" parent="HitboxPivot" instance=ExtResource("7_w6ww0")]
position = Vector2(14, -7)
collision_layer = 4
script = ExtResource("8_0v0kl")

[node name="CollisionShape2D" parent="HitboxPivot/AttackHitbox" index="0"]
position = Vector2(-8, 6.99998)
shape = SubResource("CapsuleShape2D_mn2o2")
disabled = true

[node name="InteractRange" parent="HitboxPivot" instance=ExtResource("7_w6ww0")]
position = Vector2(14, -7)
collision_layer = 8
collision_mask = 8
script = null

[node name="CollisionShape2D" parent="HitboxPivot/InteractRange" index="0"]
visible = false
position = Vector2(-7, 6.99997)
shape = SubResource("CapsuleShape2D_mn2o2")
disabled = true

[node name="Stats" parent="." instance=ExtResource("9_n3prt")]

[node name="SoftCollision" parent="." instance=ExtResource("10_k7a2a")]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
visible = false
shape = SubResource("CircleShape2D_uhepv")

[node name="Interaction" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction"]
visible = false
position = Vector2(0, -10)
shape = SubResource("CapsuleShape2D_td4ak")

[connection signal="area_entered" from="PhysicalCollision/Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="invincibility_ended" from="PhysicalCollision/Hurtbox" to="." method="_on_hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="PhysicalCollision/Hurtbox" to="." method="_on_hurtbox_invincibility_started"]
[connection signal="mouse_entered" from="Interaction" to="." method="_on_interaction_mouse_entered"]
[connection signal="mouse_exited" from="Interaction" to="." method="_on_interaction_mouse_exited"]

[editable path="PhysicalCollision/Hurtbox"]
[editable path="HitboxPivot/AttackHitbox"]
[editable path="HitboxPivot/InteractRange"]
[editable path="SoftCollision"]
